# claude-resource-manager-CLI

./: .envrc  .gitignore  CLAUDE.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_READINESS_REPORT.md  DOCUMENTATION_COMPLETENESS_REPORT.md  EPCC_CODE.md  EPCC_CODE_BUILD_FIX.md  EPCC_CODE_PHASE2.md  EPCC_CODE_PHASE3.md  EPCC_COMMIT.md  EPCC_COMMIT_FINALIZATION.md  EPCC_COMMIT_LAZY_LOADING.md  EPCC_COMMIT_PHASE2.md  EPCC_COMMIT_PHASE3.md  EPCC_COMMIT_TEST_FIXES.md  EPCC_COMMIT_VHS.md  EPCC_COMMIT_WORKFLOW.md  EPCC_EXPLORE.md  EPCC_PLAN.md  EPCC_PLAN_GO_NPM.md  EPCC_PLAN_PHASE3_STATUS_UPDATE.md  EPCC_PLAN_PHASE3_VHS.md  EPCC_PLAN_PYTHON.md  EPCC_SYSTEM_DESIGN_ANALYSIS.md  EXECUTIVE_SUMMARY.md  EXPLORATION_FINDINGS.md  LESSONS_LEARNED_PHASE2.md  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE3_STATUS_REPORT.md  PHASE_2_UX_ACCESSIBILITY_REVIEW.md  PROJECT_COMPLETION_REPORT.md  PROJECT_PLAN.md  PR_COMMENTS_RESOLUTION.md  PUSH_STATUS.md  PYTHON_PROJECT_TIMELINE.md  PYTHON_SYSTEM_DESIGN.md  QA_VALIDATION_REPORT.md  (+12 more)
.claude/: settings.example.json
.epcc-archive/phase3/: EPCC_CODE_OUTSTANDING_ISSUES.md  PHASE3_FINALIZATION_SUMMARY.md  PHASE3_GREEN_IMPLEMENTATION_PLAN.md  PHASE3_RED_PHASE_SUMMARY.md
.github/: DOCUMENTATION_CHECKLIST.md
.github/workflows/: epcc-validation.yml  vhs-demos.yml
Documentation Strategy Files/: DOCUMENTATION_EXAMPLE.md  DOCUMENTATION_QUICK_REFERENCE.md  DOCUMENTATION_ROADMAP.md  DOCUMENTATION_STRATEGY.md  DOCUMENTATION_SUMMARY.md
demo/: .gitkeep  README.md  categories.tape  fuzzy-search.tape  help-system.tape  multi-select.tape  quick-start.tape
demo/output/: .gitkeep
docs/: API_REFERENCE.md  ARCHITECTURE_PHASE2.md  CONFIGURATION.md  DEMOS.md  MIGRATION_PHASE1_TO_PHASE2.md  OUTSTANDING_ISSUES.md  PERFORMANCE_BENCHMARKS.md  PHASE3_PERFORMANCE_REPORT.md  PHASE3_SECURITY_REVIEW.md  PHASE_2_FEATURES.md  README.md  TESTING_PHASE2.md  VHS_CI_CD_IMPLEMENTATION.md  VHS_CI_CD_QUICK_REFERENCE.md  WCAG_COMPLIANCE_REPORT.md
docs/epcc/: EPCC_TEMPLATE_CODE.md  EPCC_TEMPLATE_COMMIT.md  EPCC_TEMPLATE_EXPLORE.md  EPCC_TEMPLATE_PLAN.md  README.md
docs/feature_requests/: FEATURE_REQUEST_TEST_ISOLATION.md  FEATURE_REQUEST_VHS_DOCUMENTATION.md
docs/phase3/: ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  ACCESSIBILITY_TEST_SUMMARY.md  BEFORE_AFTER_EXAMPLES.md  THEME_ARCHITECTURE_ANALYSIS.md  THEME_COLOR_USAGE_DIAGRAM.md  THEME_EVALUATION_EXECUTIVE_SUMMARY.md  THEME_FIX_SUMMARY.md  VISUAL_POLISH_IMPLEMENTATION.md
scripts/: test-vhs-workflow-local.sh  validate-vhs-workflow.sh  validate_docs.py
src/claude_resource_manager/: __init__.py  __version__.py  cli.py
src/claude_resource_manager/core/: catalog_loader.py  category_engine.py  dependency_resolver.py  installer.py  search_engine.py
src/claude_resource_manager/models/: __init__.py  catalog.py  resource.py
src/claude_resource_manager/tui/: accessibility_integration.py  app.py  browser_screen.tcss  theme.py
src/claude_resource_manager/tui/modals/: __init__.py  error_modal.py
src/claude_resource_manager/utils/: __init__.py  accessibility.py  cache.py  import_profiler.py  security.py
tests/: conftest.py
tests/integration/: test_batch_installation.py  test_vhs_integration.py
tests/unit/: test_accessibility.py  test_cli.py  test_performance.py  test_security_path_validation.py  test_security_url_validation.py  test_security_yaml_loading.py
tests/unit/core/: conftest.py  test_catalog_loader.py  test_category_engine.py  test_dependency_resolver.py  test_fuzzy_search.py  test_installer.py  test_search_engine.py
tests/unit/models/: test_catalog_model.py  test_resource_model.py
tests/unit/tui/: TEST_REPORT.md  VISUAL_POLISH_TEST_SUMMARY.md  __init__.py  conftest.py  test_advanced_ui.py  test_browser_screen.py  test_detail_screen.py  test_install_plan_screen.py  test_multi_select.py  test_search_screen.py  test_sorting_behavior.py  test_visual_polish.py
tests/utils/: __init__.py  accessibility_helpers.py  tui_helpers.py
(+13 files in other folders)
